MGS-7576 Updated mygov homepage org A-Z section - spacing corrections

--- a/repository-data/webfiles/src/main/scss/mygov/components/_homepage-org-az.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_homepage-org-az.scss
@@ -9,7 +9,7 @@
     font-size: 1rem;
     grid-gap: 0.75rem;
     line-height: 1.5rem;
-    margin-top: 1.5rem;
+    @include ds_responsive-margin(4, top);
 
     @include ds_media-query(medium) {
         grid-template-columns: 1fr 1fr;
